--- a/pages/network.html
+++ b/pages/network.html
@@ -56,7 +56,7 @@ label { display:block; margin-bottom:6px; }
         <div class="row" style="margin-top:8px">
           <div class="field">
             <label>Proxy (Cloudflare Worker)</label>
-            <input id="sslProxyUrl" placeholder="https://<your-worker>.workers.dev/"/>
+            <input id="sslProxyUrl" placeholder="https://ssllabs-proxy-vinhcb.vinhcb-path.workers.dev/"/>
           </div>
           <button class="btn ghost" id="saveSslProxy">Lưu</button>
         </div>
