--- a/pages/about.html
+++ b/pages/about.html
@@ -1,7 +1,2 @@
-
 <link rel="stylesheet" href="../assets/style.css">
-<div style="padding:18px">
-  <h3>Giới thiệu</h3>
-  <p>Phiên bản <b>Labs Dashboard</b>: mỗi tab là một file HTML riêng.</p>
-   
-</div>
+<div style="padding:18px"><h3>About</h3><p class="mini">Labs Dashboard — bản IIS, cấu trúc thư mục gọn gàng.</p></div>
