--- a/pages/store.html
+++ b/pages/store.html
@@ -1,71 +1,2 @@
-
 <link rel="stylesheet" href="../assets/style.css">
-<div style="padding:18px">
-  <div class="row" style="justify-content: space-between; gap: 12px; margin-bottom: 10px;">
-    <input id="storeSearch" class="search" placeholder="Tìm app… " aria-label="Tìm kiếm ứng dụng" />
-    <span class="chip" title="Hướng dẫn"></span>
-  </div>
-  <div class="grid" id="storeGrid">
-    <article class="card" data-tags="ultraviewer hỗ trợ từ xa">
-      <h3>Ultraviewer</h3>
-      <p> </p>
-      <div class="row">
-        <a class="btn" href="https://www.ultraviewer.net/vi/download.html" target="_blank" rel="noopener">Tải về</a>
-        <a class="btn secondary" href="https://www.ultraviewer.net/vi/" target="_blank" rel="noopener">Mở web</a>
-      </div>
-    </article>
-    <article class="card" data-tags="speedtest network đo tốc độ băng thông">
-      <h3>Speedtest by Ookla</h3>
-      <p> </p>
-      <div class="row">
-        <a class="btn" href="https://www.speedtest.net/apps" target="_blank" rel="noopener">Tải về</a>
-        <a class="btn secondary" href="https://www.speedtest.net/" target="_blank" rel="noopener">Mở web</a>
-      </div>
-    </article>
-    <article class="card" data-tags="remote anydesk hỗ trợ từ xa">
-      <h3>AnyDesk</h3>
-      <p> </p>
-      <div class="row">
-        <a class="btn" href="https://anydesk.com/en/downloads/windows" target="_blank" rel="noopener">Tải về</a>
-		<a class="btn secondary" href="https://anydesk.com/en" target="_blank" rel="noopener">Mở web</a>
-      </div>
-    </article>
-    <article class="card" data-tags="teamviewer remote hỗ trợ từ xa">
-      <h3>TeamViewer</h3>
-      <p> </p>
-      <div class="row">
-        <a class="btn" href="https://www.teamviewer.com/vi/download/windows/" target="_blank" rel="noopener">Tải về</a>
-        <a class="btn secondary" href="https://www.teamviewer.com/vi/" target="_blank" rel="noopener">Mở web</a>
-      </div>
-    </article>
-	<article class="card" data-tags="vpn wireguard network bảo mật">
-      <h3>WireGuard</h3>
-      <p> </p>
-      <div class="row">
-        <a class="btn" href="https://www.wireguard.com/install/" target="_blank" rel="noopener">Tải về</a>
-		<a class="btn secondary" href="https://www.wireguard.com/" target="_blank" rel="noopener">Mở web</a>
-      </div>
-    </article>
-    <article class="card" data-tags="terminal android termux ssh">
-     <h3>xxx</h3>
-      <p> </p>
-      <div class="row">
-    
-      </div>
-    </article>
-    
-  </div>
-</div>
-<script>
-(function(){
-  const storeSearch = document.getElementById('storeSearch');
-  const storeGrid = document.getElementById('storeGrid');
-  storeSearch.addEventListener('input', () => {
-    const q = storeSearch.value.toLowerCase().trim();
-    storeGrid.querySelectorAll('.card').forEach(card => {
-      const text = (card.innerText + ' ' + (card.dataset.tags||'')).toLowerCase();
-      card.style.display = text.includes(q) ? '' : 'none';
-    });
-  });
-})();
-</script>
+<div style="padding:18px"><h3>Store</h3><p class="mini">Trang Store (placeholder).</p></div>
