--- a/pages/system.html
+++ b/pages/system.html
@@ -1,97 +1,2 @@
-
 <link rel="stylesheet" href="../assets/style.css">
-<div class="split" style="padding:18px">
-  <div>
-    <div class="tool" style="margin-bottom:12px;">
-      <h4>Base64 Encode/Decode</h4>
-      <textarea id="b64Input" rows="5" placeholder="Nhập văn bản…"></textarea>
-      <div class="row" style="margin-top:8px;">
-        <button class="btn" id="b64Enc">Encode</button>
-        <button class="btn secondary" id="b64Dec">Decode</button>
-      </div>
-      <pre class="code" id="b64Out"></pre>
-    </div>
-
-    <div class="tool">
-      <h4>Epoch Time Converter</h4>
-      <div class="row">
-        <input id="epochInput" placeholder="Epoch (sec hoặc ms)" style="flex:1;"/>
-        <button class="btn" id="epochNow">Now</button>
-        <button class="btn secondary" id="epochToHuman">→ Human</button>
-      </div>
-      <div class="row" style="margin-top:8px;">
-        <input id="dateInput" placeholder="YYYY-MM-DD HH:mm:ss" style="flex:1;"/>
-        <button class="btn" id="humanToEpoch">→ Epoch</button>
-      </div>
-      <pre class="code" id="epochOut"></pre>
-    </div>
-  </div>
-
-  <div>
-    <div class="tool">
-      <h4>SHA‑256 Hash</h4>
-      <textarea id="hashInput" rows="5" placeholder="Nhập chuỗi cần băm…"></textarea>
-      <div class="row" style="margin-top:8px;">
-        <button class="btn" id="doHash">Tạo SHA‑256</button>
-        <button class="btn secondary" id="copyHash">Copy</button>
-      </div>
-      <pre class="code" id="hashOut"></pre>
-      <p class="mini">Dùng WebCrypto API (client‑side). Không gửi dữ liệu ra ngoài.</p>
-    </div>
-  </div>
-</div>
-<script>
-(function(){
-  const b64encode = (str) => { try { return btoa(unescape(encodeURIComponent(str))); } catch { return '⚠️ Không mã hóa được.'; } };
-  const b64decode = (str) => { try { return decodeURIComponent(escape(atob(str))); } catch { return '⚠️ Không giải mã được.'; } };
-  document.getElementById('b64Enc').addEventListener('click', () => {
-    const s = document.getElementById('b64Input').value;
-    document.getElementById('b64Out').textContent = b64encode(s);
-  });
-  document.getElementById('b64Dec').addEventListener('click', () => {
-    const s = document.getElementById('b64Input').value;
-    document.getElementById('b64Out').textContent = b64decode(s);
-  });
-
-  document.getElementById('epochNow').addEventListener('click', () => {
-    document.getElementById('epochInput').value = Date.now();
-  });
-  document.getElementById('epochToHuman').addEventListener('click', () => {
-    let v = document.getElementById('epochInput').value.trim();
-    if (!v) return;
-    let n = Number(v);
-    if (!Number.isFinite(n)) { document.getElementById('epochOut').textContent = '⚠️ Không hợp lệ'; return; }
-    if (String(Math.floor(n)).length <= 10) n = n * 1000;
-    const d = new Date(n);
-    document.getElementById('epochOut').textContent = d.toString() + "\\nISO: " + d.toISOString();
-  });
-  document.getElementById('humanToEpoch').addEventListener('click', () => {
-    const s = document.getElementById('dateInput').value.trim();
-    if (!s) return;
-    const d = new Date(s.replace(' ', 'T'));
-    if (isNaN(d)) { document.getElementById('epochOut').textContent = '⚠️ Không phân tích được ngày/giờ'; return; }
-    document.getElementById('epochOut').textContent = Math.floor(d.getTime()/1000) + ' sec\\n' + d.getTime() + ' ms';
-  });
-
-  async function sha256(message) {
-    const enc = new TextEncoder().encode(message);
-    const buf = await crypto.subtle.digest('SHA-256', enc);
-    const arr = Array.from(new Uint8Array(buf));
-    return arr.map(b => b.toString(16).padStart(2,'0')).join('');
-  }
-  document.getElementById('doHash').addEventListener('click', async () => {
-    const s = document.getElementById('hashInput').value;
-    try {
-      const h = await sha256(s);
-      document.getElementById('hashOut').textContent = h;
-    } catch (e) {
-      document.getElementById('hashOut').textContent = '⚠️ Trình duyệt không hỗ trợ WebCrypto';
-    }
-  });
-  document.getElementById('copyHash').addEventListener('click', async () => {
-    const t = document.getElementById('hashOut').textContent.trim();
-    if (!t) return;
-    await navigator.clipboard.writeText(t);
-  });
-})();
-</script>
+<div style="padding:18px"><h3>System</h3><p class="mini">Trang System (placeholder).</p></div>
