--- a/pages/home.html
+++ b/pages/home.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="../assets/style.css">
 <div style="padding:10px">
-  <h2 style="margin-top:0">Chào mừng đến Labs Dashboard</h2>
+  <h2 style="margin-top:0">Chào mừng bạn đến Labs</h2>
   <p class="mini">Chọn một tab ở trên để sử dụng công cụ. Bắt đầu nhanh:</p>
   <div class="grid" style="margin-top:10px">
     <div class="tool">
