--- a/pages/home.html
+++ b/pages/home.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="../assets/style.css">
 <div style="padding:10px">
-  <h2 style="margin-top:0">Chào mừng bạn đến Labs</h2>
-  <p class="mini">Chọn một tab ở trên để sử dụng công cụ. Bắt đầu nhanh:</p>
+  <h2 style="margin-top:0">Chào mừng bạn đến với địa chỉ này !</h2>
+  <p class="mini">Mời bạn chọn một tab ở trên để sử dụng công cụ. Bắt đầu nhanh:</p>
   <div class="grid" style="margin-top:10px">
     <div class="tool">
       <h4>Network → IP PUBLIC</h4>
